_sass/_homepage.scss
/* homepage body */
.page-content { background-color: $bckgrd-clr; }

/* masonry config */
.grid-container {
  margin: 0 auto;
}

.block {
  background-color: $whte;
  display: inline-block;
  width: 275px;
  margin: .4em;
  -webkit-box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0px rgba(0, 0, 0, 0.19);
    -moz-box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0px rgba(0, 0, 0, 0.19);
         box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.2), 0 6px 20px 0px rgba(0, 0, 0, 0.19);

  div {
    padding: 1em;

    h2 {
      margin-bottom: 0;
      text-transform: $upcase;

      a.post-link { color: $blk; }

      a.post-link:hover {
        text-decoration: none;
        transition: color 0.3s;
        color: $post-hover-clr;
      }
    }

    p {
      .btn-read {
        padding: 3px;
        border-radius: 16px;
        background-color: $nke-g-clr;
      }
    }
  }

  .post-meta { text-transform: $upcase; }
}

@media only screen and (max-width: 415px) {
  .grid-container {
    margin: 0;
  }

  .block {
    margin: 0;
    width: 100%;
  }
}

